tests/machine/x/c/update_stmt.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘test_update_adult_status’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:59:9: error: ‘people’ undeclared (first use in this function)
   59 |   if (!(people == tmp1)) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:59:9: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:78:11: error: redefinition of ‘name’
   78 |     char *name = tmp4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:75:11: note: previous definition of ‘name’ with type ‘char *’
   75 |     char *name = tmp4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:79:9: error: redefinition of ‘age’
   79 |     int age = tmp4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:76:9: note: previous definition of ‘age’ with type ‘int’
   76 |     int age = tmp4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:80:11: error: redefinition of ‘status’
   80 |     char *status = tmp4.status;
      |           ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:77:11: note: previous definition of ‘status’ with type ‘char *’
   77 |     char *status = tmp4.status;
      |           ^~~~~~

   1: #include <stdio.h>
